--- a/src/components/Mobile/WikiLoveMonuments/WikiLoveMonuments.module.css
+++ b/src/components/Mobile/WikiLoveMonuments/WikiLoveMonuments.module.css
@@ -8,3 +8,19 @@
   z-index: 2;
   padding: 32px 24px;
 }
+
+.TopWikiLove {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--primary);
+  border-bottom: 0.5px solid var(--primary);
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+}
+
+.WikiLoveLabel {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+}
