--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body,
   --tertiary: #cf4130;
   --concorso: #fed169;
   --overlay: #e9f1f3;
+  --colori-neutri-white: #ffffff;
+  --colori-neutri-gray-2: #d0dfe4;
   --topbar-mobile-height: 45px;
   --bottom-mobile-navigation-height: 60px;
   --font-roboto-slab: 'Roboto Slab', serif;
