--- a/src/pages/Mobile/Map/Map.module.css
+++ b/src/pages/Mobile/Map/Map.module.css
@@ -14,8 +14,9 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  background: var(--colori-neutri-white, #fff);
+  background: var(--colori-neutri-white);
   box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
 }
 
 .ButtonMappe {
@@ -25,9 +26,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  background: var(--colori-neutri-white, #fff);
+  background: var(--colori-neutri-white);
   box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
   margin-bottom: 16px;
+  border: none;
 }
 
 .ButtonFilter {
@@ -46,4 +48,14 @@
   background: var(--primary);
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.05);
   z-index: 1;
+}
+
+.ButtonFilter:focus {
+  border: 1px solid var(--primary);
+  background: var(--colori-neutri-gray-2);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.ButtonFilter:focus svg {
+  stroke: var(--primary);
 }
