--- a/src/components/Mobile/Topbar/Topbar.module.css
+++ b/src/components/Mobile/Topbar/Topbar.module.css
@@ -9,6 +9,7 @@
   padding-left: 16px;
   padding-right: 16px;
   display: flex;
+  z-index: 1;
   align-items: center;
   justify-content: space-between;
 }
