Preparing documents list

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body,
   --concorso: #fed169;
   --overlay: #e9f1f3;
   --colori-neutri-white: #ffffff;
+  --colori-neutri-gray: #84a5bd;
   --colori-neutri-gray-2: #d0dfe4;
   --topbar-mobile-height: 45px;
   --bottom-mobile-navigation-height: 60px;
