--- a/src/components/Mobile/BottomNavigation/BottomNavigation.module.css
+++ b/src/components/Mobile/BottomNavigation/BottomNavigation.module.css
@@ -12,9 +12,15 @@
 }
 
 .Map,
-.List,
-.Profile {
+.List {
   margin-right: 36px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Profile {
   display: flex;
   flex-direction: column;
   align-items: center;
