--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -141,3 +141,51 @@
   justify-content: center;
   align-items: center;
 }
+
+.PaginationDot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: var(--colori-neutri-gray);
+  margin-right: 8px;
+}
+
+.PaginationImagesDots {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.PaginationDotActive {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: var(--primary);
+  margin-right: 8px;
+}
+
+.SlideShow {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  z-index: 5;
+  top: 0;
+  left: 0;
+}
+
+.SlideShowImage {
+  height: 478px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  margin-top: 20%;
+}
+
+.SlideShowClose {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 6;
+}
