--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -92,6 +92,7 @@
   padding: 16px 32px;
   border-radius: 5px;
   margin-top: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .ImmaginiWlmTitle {
