Preparing components icon monument type

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body,
   --secondary: #40baec;
   --secondary-variant: #eff8fb;
   --tertiary: #cf4130;
+  --monumento-tante-foto: #12AAFF;
+  --monumento-poche-foto: #973FFF;
   --concorso: #fed169;
   --overlay: #e9f1f3;
   --colori-neutri-white: #ffffff;
