--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body,
   --colori-neutri-gray: #84a5bd;
   --colori-neutri-gray-2: #d0dfe4;
   --colori-neutri-dark-gray: #4a4a4a;
+  --colori-neutri-background: #fbfbfb;
   --topbar-mobile-height: 45px;
   --bottom-mobile-navigation-height: 60px;
   --font-roboto-slab: 'Roboto Slab', serif;
