--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -280,3 +280,24 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.ExternalLink {
+  display: flex;
+  padding: 8px 8px 8px 16px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  margin-top: 8px;
+  color: var(--primary-color, #118ab2);
+  text-align: center;
+  /* Links */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-decoration-line: underline;
+}
