--- a/src/components/Mobile/BlockOrdering/BlockOrdering.module.css
+++ b/src/components/Mobile/BlockOrdering/BlockOrdering.module.css
@@ -1,18 +1,3 @@
-.InputSearchFieldComune {
-  border-radius: 30px;
-  background: var(--colori-neutri-white);
-  box-shadow: 1px 2px 0px 0px rgba(17, 138, 178, 0.23);
-  border: 1px solid transparent;
-  display: flex;
-  padding: 8px;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
-  width: 100%;
-  padding-left: 24px;
-  padding-right: 48px;
-}
-
 .OverlayFilters {
   position: fixed;
   top: 0;
@@ -29,7 +14,7 @@
   overflow-y: auto;
 }
 
-.ContainerFilters {
+.ContainerFiltersOrdering {
   border-radius: 30px 30px 0px 0px;
   background: var(--overlay);
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.1);
@@ -39,14 +24,14 @@
   align-items: center;
   gap: 24px;
   position: fixed;
-  min-height: 340px;
+  min-height: 180px;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 9;
 }
 
-.TitleBlockFilters {
+.TitleBlockOrdering {
   color: var(--primary);
   text-align: center;
   /* H2 */
@@ -85,7 +70,7 @@
   cursor: pointer;
 }
 
-.BlockFilterComune {
+.BlockChooseOrdering {
   position: fixed;
   top: 0px;
   bottom: 0px;
@@ -95,9 +80,6 @@
   width: 100%;
   height: 100%;
   z-index: 12;
-}
-
-.BlockFilterComune {
   padding: 16px 24px;
 }
 
@@ -144,4 +126,15 @@
   background: var(--colori-neutri-white);
   box-shadow: 1px 2px 0px 0px rgba(17, 138, 178, 0.23);
   outline: none;
+}
+
+.FilterTitle {
+  color: var(--primary);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
