--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -7,6 +7,7 @@
   z-index: 1000;
   background-color: var(--overlay);
   padding: 24px 16px;
+  overflow-y: auto;
 }
 
 .CloseModal {
@@ -121,6 +122,29 @@
 .ImageToUpload {
   width: 100%;
   height: 250px;
-  object-fit: contain;
+  background-size: contain;
+  background-position: center;
   border-radius: 5px;
+}
+
+.PaginationDot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: var(--colori-neutri-gray);
+  margin-right: 8px;
+}
+
+.PaginationImagesDots {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.PaginationDotActive {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: var(--primary);
+  margin-right: 8px;
 }
