--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -125,6 +125,7 @@
   background-size: contain;
   background-position: center;
   border-radius: 5px;
+  background-repeat: no-repeat;
 }
 
 .PaginationDot {
