--- a/src/components/Mobile/BlockFilters/BlockFilters.module.css
+++ b/src/components/Mobile/BlockFilters/BlockFilters.module.css
@@ -98,6 +98,23 @@
   z-index: 12;
 }
 
+.BlockFilterCategoria {
+  position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  background: var(--overlay);
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 12;
+  display: flex;
+  padding: 16px 24px;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
 .BlockFilterComune {
   padding: 16px 24px;
 }
@@ -146,3 +163,33 @@
   box-shadow: 1px 2px 0px 0px rgba(17, 138, 178, 0.23);
   outline: none;
 }
+
+.OrderingItem {
+  display: flex;
+  height: 34px;
+  padding: 8px 0px 8px 24px;
+  align-items: center;
+  gap: 32px;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  color: var(--primary-color, #118ab2);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 8px;
+}
+
+.OrderingItemActive {
+  background: var(--primary);
+  color: var(--colori-neutri-white);
+}
+
+.ListOrderingItems{
+  width: 100%;
+}
+
