--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -118,7 +118,7 @@
 .ContainerImages {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 8px;
   margin-top: 16px;
   margin-bottom: 16px;
