--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -249,6 +249,82 @@
   background: var(--overlay);
 }
 
+.CardMonumentiComune {
+  margin-top: 16px;
+  padding: 16px;
+  border-radius: 5px;
+  background: var(--overlay);
+}
+
+.IMonumentiDelComune {
+  color: var(--primary);
+  /* H2 */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.MonumentiComune {
+  margin-top: 16px;
+}
+
+.MonumentiComuneItem {
+  display: flex;
+  padding: 8px 8px 8px 16px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+  margin-bottom: 5px;
+}
+
+.MonumentiComuneItemTitle {
+  color: var(--colori-neutri-dark-gray);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.MonumentiComuneItemValue {
+  color: var(--primary);
+  text-align: center;
+  /* H2 */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.ButtonShowMonumenti {
+  display: flex;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--primary);
+  /* Shade Button Light */
+  box-shadow: 1px 1px 0px 0px rgba(17, 138, 178, 0.23);
+  color: var(--colori-neutri-white);
+  text-align: center;
+  /* CTA */
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  width: 100%;
+  line-height: normal;
+  border: none;
+  margin-top: 16px;
+}
+
 .ExternalLinksTitle {
   color: var(--colori-neutri-dark-gray);
   /* H2 */
