--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,8 @@ body,
   position: relative;
   overflow: hidden;
   background: var(--primary);
+  padding: 16px;
+  padding: 16px;
 }
 
 .no-link {
