--- a/src/pages/Mobile/List/List.module.css
+++ b/src/pages/Mobile/List/List.module.css
@@ -145,3 +145,15 @@
   line-height: normal;
   margin-top: 4px;
 }
+
+@media screen and (min-width: 768px) {
+  .ListMonuments {
+    border-radius: 10px;
+    background: var(--overlay);
+    margin-top: 8px;
+    padding: 8px;
+    height: calc(100% - 45px);
+    overflow-y: auto;
+    position: relative;
+  }
+}
