--- a/src/components/Desktop/BlockFilters/BlockFilters.module.css
+++ b/src/components/Desktop/BlockFilters/BlockFilters.module.css
@@ -107,6 +107,7 @@
   display: flex;
   height: 34px;
   padding: 8px 0px 8px 24px;
+  cursor: pointer;
   align-items: center;
   gap: 32px;
   align-self: stretch;
