Working on switch desktop mobile

--- a/src/components/Desktop/BlockOrdering/BlockOrdering.module.css
+++ b/src/components/Desktop/BlockOrdering/BlockOrdering.module.css
@@ -51,6 +51,7 @@
 .OrderingItemActive {
   background: var(--primary);
   color: var(--colori-neutri-white);
+  width: 100%;
 }
 
 .ListOrderingItems{
