--- a/src/pages/Desktop/List/List.module.css
+++ b/src/pages/Desktop/List/List.module.css
@@ -10,14 +10,31 @@
   margin-left: 8px;
 }
 
+.CardContainerListWithDetail {
+  display: flex;
+  width: calc(100% - 401px - 348px);
+  height: 100%;
+  padding: 24px;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: var(--colori-neutri-background);
+  margin-left: 8px;
+}
+
 .MonumentsBlock {
   width: calc(100% - 225px);
   height: 100%;
 }
 
+.MonumentsBlockWithDetail {
+  width: calc(100%);
+  height: 100%;
+}
+
 .InputSearch {
   height: 45px;
-  padding: 8px 24px;
+  padding: 8px 48px;
   align-items: center;
   gap: 16px;
   border-radius: 30px;
@@ -33,4 +50,94 @@
   background: var(--colori-neutri-white, #fff);
   box-shadow: 1px 2px 0px 0px rgba(17, 138, 178, 0.23);
   outline: none;
+}
+
+.SearchIcon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.ListMonuments {
+  border-radius: 10px;
+  background: var(--overlay);
+  margin-top: 8px;
+  padding: 8px;
+  height: calc(100% - 52px);
+  overflow-y: auto;
+  position: relative;
+}
+
+.MonumentCard {
+  display: flex;
+  min-height: 84px;
+  padding: 16px 24px;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  margin-bottom: 4px;
+  cursor: pointer;
+}
+
+.MonumentTitle {
+  color: var(--primary);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  max-width: 200px;
+}
+
+.City {
+  color: var(--colori-neutri-gray);
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.NumberPhoto {
+  color: var(--primary);
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  display: flex;
+  align-items: center;
+}
+
+.Distance {
+  color: var(--colori-neutri-gray);
+  text-align: center;
+  font-family: var(--font-roboto-slab);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 4px;
+}
+
+.CardDetail {
+  display: flex;
+  width: 401px;
+  height: 100%;
+  padding: 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: var(--colori-neutri-background);
+  margin-left: 8px;
 }
