--- a/src/pages/Desktop/Map/Map.module.css
+++ b/src/pages/Desktop/Map/Map.module.css
@@ -62,7 +62,7 @@
   border-radius: 30px;
   background: var(--colori-neutri-white);
   box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   border: none;
 }
 
@@ -102,4 +102,37 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.LegendButton {
+  border-radius: 30px;
+  background: var(--primary);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border: none;
+  margin-top: 8px;
+}
+
+.LegendButton:hover {
+  background: rgba(17, 138, 178, 0.8);
+  cursor: pointer;
+}
+
+.LegendButtonActive {
+  border-radius: 30px;
+  border: 3px solid var(--secondary);
+  background: var(--primary);
+  box-shadow: 0px 0px 10px 0px #bdecff;
+  position: absolute;
+  right: 16px;
+  bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
 }
