--- a/src/pages/Desktop/Map/Map.module.css
+++ b/src/pages/Desktop/Map/Map.module.css
@@ -69,13 +69,12 @@
 .DetailMarker {
   display: flex;
   width: 160px;
-  height: 71px;
+  height: 81px;
   padding: 8px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-  background: var(--monumento-poche-foto);
   /* Markers */
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
@@ -115,6 +114,42 @@
   height: 44px;
   border: none;
   margin-top: 8px;
+}
+
+.ZoomIn {
+  border-radius: 30px;
+  background: var(--colori-neutri-white);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border: none;
+  margin-top: 8px;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  font-size: 30px;
+  color: var(--primary);
+}
+
+.ZoomOut {
+  border-radius: 30px;
+  background: var(--colori-neutri-white);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border: none;
+  margin-top: 8px;
+  position: absolute;
+  right: 16px;
+  top: 64px;
+  font-size: 30px;
+  color: var(--primary);
 }
 
 .LegendButton:hover {
