--- a/src/components/Mobile/SlideShow/SlideShow.module.css
+++ b/src/components/Mobile/SlideShow/SlideShow.module.css
@@ -41,14 +41,42 @@
   color: var(--colori-neutri-white);
 }
 
-@media screen and (min-width: 768px) {
-
-.SlideShowImage {
-  height: 80%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  margin-top: 0%;
+.InfoBlockSlideShowTitle {
+  color: var(--colori-neutri-white);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
+
+.Municipality {
+  color: var(--colori-neutri-white);
+  /* Label */
+  font-family: var(--font-roboto-slab);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.PicturesCount {
+  color: var(--colori-neutri-white);
+  /* Label */
+  font-family: var(--font-roboto-slab);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .SlideShowImage {
+    height: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    margin-top: 0%;
+  }
 }
