--- a/src/pages/Desktop/Map/Map.module.css
+++ b/src/pages/Desktop/Map/Map.module.css
@@ -69,7 +69,7 @@
 .DetailMarker {
   display: flex;
   width: 160px;
-  height: 81px;
+  height: max-content;
   padding: 8px;
   flex-direction: column;
   justify-content: center;
@@ -77,6 +77,19 @@
   border-radius: 5px;
   /* Markers */
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.PinMarker {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  content: ' ';
+  font-size: 0;
+  line-height: 0;
+  margin-left: -10px;
+  width: 0;
 }
 
 .TitleMarker {
