--- a/src/components/BottomNavigation/BottomNavigation.module.css
+++ b/src/components/BottomNavigation/BottomNavigation.module.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .Profile {
@@ -25,6 +26,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .LabelActive {
