--- a/src/pages/Desktop/Map/Map.module.css
+++ b/src/pages/Desktop/Map/Map.module.css
@@ -175,12 +175,12 @@
   border: 3px solid var(--secondary);
   background: var(--primary);
   box-shadow: 0px 0px 10px 0px #bdecff;
-  position: absolute;
-  right: 16px;
-  bottom: 16px;
+  
   display: flex;
   align-items: center;
   justify-content: center;
   width: 44px;
   height: 44px;
+  border-radius: 30px;
+  margin-top: 8px;
 }
