--- a/src/pages/Mobile/List/List.module.css
+++ b/src/pages/Mobile/List/List.module.css
@@ -26,7 +26,7 @@
   transform: translateY(-50%);
 }
 
-.ButtonFilters {
+.ButtonFiltersActive {
   display: flex;
   width: 32px;
   height: 32px;
@@ -43,6 +43,25 @@
   background: var(--primary);
   cursor: pointer;
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.05);
+}
+
+.ButtonFilters {
+  border-radius: 10px;
+  border: 1px solid var(--primary-color, #118ab2);
+  background: var(--colori-neutri-gray-2, #d0dfe4);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  display: flex;
+  width: 32px;
+  height: 32px;
+  padding: 5px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .ButtonOrdering {
